[package]
name = "in_str"
description = "A procedural macro to generate a closure that checks if a character is in the provided literal string."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["DiscreteTom <discrete_tom@outlook.com>"]
repository = "https://github.com/DiscreteTom/in_str"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
